Fix Button overlaping and formatting

--- a/src/components/scrollToTop/ScrollToTop.scss
+++ b/src/components/scrollToTop/ScrollToTop.scss
@@ -1,8 +1,19 @@
 .scroll-to-top{
-    position: fixed; 
-    width: 56px;
-    height: 56px;
-    bottom: 4%;
-    right: 5%;
-    z-index: 1000;
+  position: fixed; 
+  width: 56px;
+  height: 56px;
+  bottom: 4%;
+  right: 2%;
+  z-index: 1000;
+}
+
+@media only screen and (max-width: 1000px) {
+  .scroll-to-top{
+      position: fixed; 
+      width: 56px;
+      height: 56px;
+      bottom: 22%;
+      right: 5%;
+      z-index: 1000;
+  }
 }
